# mini-bar

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-cls.txt  requirements.txt
classification/: datamodule.py  dataset.py  dl_config.json  dl_test.py  dl_train.py  llm.py  llm_analyse.py  llm_config.json  log_analyser.py  ml_config.json  ml_train_test.py  model.py  ptm-classifier.py  utilities.py
clustering/: config.json  embed_script.py  evaluate.py  hard_clustering.py  main.py
dataset/for_classification/: Garmin Connect.en.csv  Garmin Connect.fr.csv  Huawei Health.en.csv  Huawei Health.fr.csv  Samsung Health.en.csv  Samsung Health.fr.csv
dataset/for_clustering/labelled/Garmin Connect/: feature_request.csv  problem_report.csv
dataset/for_clustering/labelled/Huawei Health/: feature_request.csv  problem_report.csv
dataset/for_clustering/labelled/Samsung Health/: feature_request.csv  problem_report.csv
summarization/: analyse_likert.py  generate_likert.py  summarizer.py
tool/: mini_bar.py  report.py  report_template.txt  utilities.py
